# RadTrack

./: CMakeCache.txt  CMakeLists.txt  Makefile  RadTrack  cmake_install.cmake  compileAndRun.pl  main  main.cpp
logs/: log.txt
src/: close_window_callback.cpp  close_window_callback.h  glad.c  glad.h  main.cpp
src/engine/headers/: engine.h  engine_input.h  engine_time.h  gl_helper.h  screen.h
src/engine/sources/: engine.cpp  engine_input.cpp  engine_time.cpp  gl_helper.cpp  screen.cpp
src/include/glad/: glad.h
src/src/: glad.c  main.cpp
src/utils/headers/: engine_logger.h  log_level.h  logger.h  utils_types.h
src/utils/sources/: engine_logger.cpp  logger.cpp  utils_types.cpp
